@@ -376,6 +376,16 @@ fixed error message displayed when a note does not exist.
 new task dialog allow to set description and priority.
 </p>
 </li>
+<li>
+<p>
+added project table to filter the list of tasks.
+</p>
+</li>
+<li>
+<p>
+added application icon.
+</p>
+</li>
 </ul></div>
 </div>
 </div>
@@ -444,7 +454,7 @@ Initial release.
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-11-27 08:24:21 CET
+Last updated 2013-12-01 12:29:07 CET
 </div>
 </div>
 </body>
